--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
     "docker:run": "docker run -p 3000:3000 copaco-quotes"
   },
   "dependencies": {
-    "fastify": "^4.24.3",
     "@fastify/cors": "^8.4.0",
-    "zod": "^3.22.4",
     "axios": "^1.6.0",
-    "sqlite3": "^5.1.6",
+    "fastify": "^4.24.3",
     "graphql": "^16.8.1",
     "mercurius": "^13.3.3",
-    "natural": "^6.10.0"
+    "natural": "^6.10.0",
+    "sqlite3": "^5.1.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.8.9",
     "@types/jest": "^29.5.7",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@types/node": "^20.8.9",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
