--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,5 @@
-# Quote Service Configuration
-
-# REST API Configuration
 REST_PORT=3000
-
-# GraphQL API Configuration  
 GRAPHQL_PORT=3001
-
-# Database Configuration (if needed in future)
-# DATABASE_URL=sqlite:./quotes.db
-
-# Logging Level
-LOG_LEVEL=info
+DATABASE_PATH=./quotes.db
+QUOTABLE_API_URL=https://api.quotable.io
+NODE_ENV=development
